Override package-contains-empty-directory

--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,7 @@
 #export DH_VERBOSE=1
 
 DEST=$(CURDIR)/debian/gcin-voice/usr/share/gcin-voice/ogg
+LINTIAN_OVERRIDE=$(CURDIR)/debian/gcin-voice/usr/share/lintian/overrides
 
 %:
 	dh $@
@@ -12,3 +13,5 @@ DEST=$(CURDIR)/debian/gcin-voice/usr/share/gcin-voice/ogg
 override_dh_auto_install:
 	mkdir -p $(DEST)
 	xargs -a $(CURDIR)/debian/list cp -r -t $(DEST)
+	mkdir -p $(LINTIAN_OVERRIDE)
+	cp $(CURDIR)/debian/gcin-voice.lintian-overrides $(LINTIAN_OVERRIDE)/gcin-voice
